# deployments

./: .gitignore  CLAUDE.md  README.md
ansible/: .gitignore  BUILD_DEPLOY.md  README.md  argo_resources.yml  bootstrap_portal_admin.yml  build_it.yml  build_release.yml  build_service.yml  clone_sources.yml  condor.yml  deploy_it.yml  deploy_service.yml  dirty_frag_mitigation.yml  disable_af_alg.yml  discoenv_analyses_cleanup.yml  discoenv_users_cleanup.yml  jex_adapter_cleanup.yml  kubernetes.yml  openldap_community_group.yml  opensearch.yml  portal.yml  print_host_distros.yml  qms_adapter_cleanup.yml  rabbitmq.yml  rabbitmq_configure.yml  reboot_nodes.yml  requirements.yml  uninstall_disable_af_alg.yml  update_nodes.yml  vice-operator-eks.yml
docs/: admin-procedures.md  batch-analyses-troubleshooting.md  certificate-management.md  index.md  irods.md  keycloak.md  ops-runbook.md  postgresql.md  vice-troubleshooting.md
kustomize/: README.md
notes/: nats-removal-finish-plan.md  storage.md
scripts/appei/: README.md  cloudshell.json  de-word-count.json  portal-delete-user.json  pyproject.toml
scripts/appei/src/appei/: cli.py  client.py  exporter.py  importer.py  tokens.py  transform.py
scripts/appei/tests/: conftest.py  test_cli.py  test_client.py  test_exporter.py  test_importer.py  test_tokens.py  test_transform.py
scripts/okf/: README.md  pyproject.toml
scripts/okf/src/okf/: __init__.py  bundle.py  cli.py  frontmatter.py  indexgen.py  rules.py
scripts/okf/tests/: conftest.py  test_bundle.py  test_cli.py  test_frontmatter.py  test_indexgen.py  test_rules.py
(+543 files in other folders)
