[project]
name = "appei"
version = "0.2.0"
description = "Export and import DE app and tool definitions via the Terrain API"
readme = "README.md"
authors = [
    { name = "John Wregglesworth", email = "wregglej@arizona.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "deepmerge>=1.1",
    "requests>=2.31",
    "tabulate>=0.9",
]

[project.scripts]
appei = "appei.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
